# FR-Mobile

./: .gitmodules  CLAUDE.md  CMakeLists.txt  CMakeLists_crossplatform.txt  Forestry Research Device - Cpp Migration Project.docx  Migration.md  build.bat  project_structure.txt  ~$restry Research Device - Cpp Migration Project.docx
docs/: BQ34Z100 Config Loader.md  Cellular Manager.md  Context.md  Doxyfile  Forestry Research Device - Cpp Migration Project.mb  Implamentation.md  Power Manager.md  Progress.md  RTC Time Manager.md  SD Card Manager.md  Setup_Guide.md  WiFi Scanner.md  ble_scanner.md  bq34z100.md  data managment.md  logger.md
docs/html/: _context_8md.html  _implamentation_8md.html  _migration_8md.html  _power_01_manager_8md.html  annotated.html  annotated_dup.js  battery__monitor_8cpp.html  battery__monitor_8cpp.js  battery__monitor_8cpp_source.html  battery__monitor_8h.html  battery__monitor_8h_source.html  ble__scanner_8cpp.html  ble__scanner_8cpp.js  ble__scanner_8cpp_source.html  ble__scanner_8h.html  ble__scanner_8h.js  ble__scanner_8h_source.html  ble__scanner_8md.html  bq34z100_8cpp.html  bq34z100_8cpp_source.html  bq34z100_8h.html  bq34z100_8h_source.html  bq34z100_8md.html  cellular__manager_8h.html  cellular__manager_8h.js  cellular__manager_8h_source.html  class_b_l_e_scanner-members.html  class_b_l_e_scanner.html  class_b_l_e_scanner.js  class_battery_monitor-members.html  class_battery_monitor.html  class_battery_monitor.js  class_cellular_manager-members.html  class_cellular_manager.html  class_cellular_manager.js  class_forestry_research_device-members.html  class_forestry_research_device.html  class_forestry_research_device.js  class_i_data_storage-members.html  class_i_data_storage.html  (+216 more)
docs/html/search/: all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_1a.js  all_1b.js  all_1c.js  all_1d.js  all_1e.js  all_1f.js  all_2.js  all_20.js  all_26.js  all_2a.js  all_3.js  all_4.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  (+105 more)
docs/latex/: _context_8md.tex  _implamentation_8md.tex  _migration_8md.tex  _power_01_manager_8md.tex  annotated.tex  battery__monitor_8cpp.tex  battery__monitor_8cpp_source.tex  battery__monitor_8h.tex  battery__monitor_8h_source.tex  ble__scanner_8cpp.tex  ble__scanner_8cpp_source.tex  ble__scanner_8h.tex  ble__scanner_8h_source.tex  ble__scanner_8md.tex  bq34z100_8cpp.tex  bq34z100_8cpp_source.tex  bq34z100_8h.tex  bq34z100_8h_source.tex  bq34z100_8md.tex  cellular__manager_8h.tex  cellular__manager_8h_source.tex  class_b_l_e_scanner.eps  class_b_l_e_scanner.tex  class_battery_monitor.eps  class_battery_monitor.tex  class_cellular_manager.eps  class_cellular_manager.tex  class_forestry_research_device.tex  class_i_data_storage.eps  class_i_data_storage.tex  class_i_hardware_interface.eps  class_i_hardware_interface.tex  class_i_network_interface.eps  class_i_network_interface.tex  class_i_power_manager.eps  class_i_power_manager.tex  class_i_scanner.eps  class_i_scanner.tex  class_i_time_manager.eps  class_i_time_manager.tex  (+76 more)
include/: interfaces.h  main.h
include/data/: cellular_manager.h  rtc_time_manager.h  sdcard_manager.h
include/hardware/: bq34z100.h  bq34z100_config_loader.h  power_manager.h
include/scanners/: ble_scanner.h  wifi_scanner.h
include/utils/: logger.h
main/: CMakeLists.txt
src/: main.V1  main.cpp  test_main.cpp
src/data/: cellular_manager.cpp  rtc_time_manager.cpp  sdcard_manager.cpp
src/hardware/: bq34z100_battery_monitor.cpp  bq34z100_config_loader.cpp  power_manager.cpp
src/scanners/: ble_scanner.cpp  wifi_scanner.cpp
src/utils/: logger.cpp  utils.cpp
