idf_component_register(
    SRCS 
        "../src/main.cpp"
        "../src/scanners/wifi_scanner.cpp"
        "../src/scanners/ble_scanner.cpp"
        "../src/hardware/bq34z100_battery_monitor.cpp"
        "../src/hardware/power_manager.cpp"
        "../src/data/sdcard_manager.cpp"
        "../src/data/cellular_manager.cpp"
        "../src/data/rtc_time_manager.cpp"
        "../src/utils/logger.cpp"
        "../src/utils/utils.cpp"
    INCLUDE_DIRS 
        "../include"
    REQUIRES 
        esp_wifi
        esp_system
        esp_event
        nvs_flash
        driver
        fatfs
        sdmmc
        spi_flash
        bt
        esp_timer
        esp_sleep
        esp_pm
        freertos
        esp_http_client
        esp_https_ota
        app_update
        esp_netif
        esp_adc)